# busydemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  README.md  SETUP.md  index.html
example/: newserver.conf  oldserver.conf  oldserver.users
scripts/: 01_build_certs.sh  02_start_oldserver.sh  03_start_newserver.sh
src/client/: CMakeLists.txt  client.cpp
src/newserver/: CMakeLists.txt  newserver.cpp  newserver_db.cpp  newserver_db.h  newserver_sync.cpp  newserver_sync.h  newserver_tls.cpp  newserver_tls.h
src/oldserver/: CMakeLists.txt  oldserver.cpp  oldserver_db.cpp  oldserver_db.h  oldserver_sync.cpp  oldserver_sync.h
test/: config.sh  test_newserver_newapi_getflavour.sh  test_newserver_newapi_getportfolio.sh  test_newserver_newapi_getuser.sh  test_newserver_newapi_setdata.sh  test_newserver_newapi_setuser.sh  test_newserver_root.sh  test_oldserver_oldapi_getassets.sh  test_oldserver_oldapi_getcolor.sh  test_oldserver_oldapi_getuser.sh  test_oldserver_oldapi_setdata.sh  test_oldserver_oldapi_setuser.sh  test_oldserver_root.sh
